fix: set z-index due to buttons appearing above nav

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ body {
 }
 
 nav {
+  z-index: 90;
   width: 100%;
   position: sticky;
   top: 0;
